<resources>
    <string name="app_name">PopularMovies</string>

    <!-- - - - - - - - - - - - - - -  -->
    <!--   Activity Detail Strings    -->
    <!-- - - - - - - - - - - - - - -  -->

    <string name="rating_text">Rating:</string>
    <string name="release_date_text">Release Date:</string>
    <string name="movie_synopsis_text">Movie Synopsis</string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="saved_cloud">Saved to cloud!</string>
    <string name="save_failed_cloud">Not saved to cloud, try again</string>
    <string name="deleted_cloud">Deleted from cloud!</string>
    <string name="delete_failed_cloud">Not deleted from cloud, try again</string>
    <string name="saved_locally">Saved to device!</string>
    <string name="save_failed_locally">Not saved on device, try again</string>
    <string name="deleted_locally">Deleted from device!</string>
    <string name="delete_failed_locally">Not deleted from device, try again</string>
    <string name="trailer_play_failed">Can\'t Play Trailer</string>

    <!-- - - - - - - - - - - - - - -->
    <!--   Activity Login Strings  -->
    <!-- - - - - - - - - - - - - - -->

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="auth_error">Authentication failed</string>

    <!-- - - - - - - - - - - - - - -  -->
    <!--      Movie Filter Menu       -->
    <!-- - - - - - - - - - - - - - -  -->

    <string name="favourites">Favourites</string>
    <string name="log_out">Log Out</string>

    <string name="error_text">Error Loading Movies</string>
    <string name="transition_movie_image">movie_image</string>


</resources>
